add SASL SSL KAFKA