@@ -171,6 +171,7 @@ ssl.client.auth=required
 ^D
 ```
 запускаем своего консьюмера:
+
 ```
 ./bin/kafka-console-consumer.sh --bootstrap-server vm102.example.com:9093  --topic test2 --consumer.config client-ssl.properties --from-beginning
 test
@@ -180,4 +181,91 @@ More testing. These messages seem to be getting through!
 Processed a total of 3 messages
 ```
 
+# kafka SASL SSL
 
+тастраиваем всё как и раньше кроме клиентских сертификатов
+правим конфигурацию /etc/kafka/server.properties
+```
+broker.id=1
+num.network.threads=3
+num.io.threads=8
+socket.send.buffer.bytes=102400
+socket.receive.buffer.bytes=102400
+socket.request.max.bytes=104857600
+log.dirs=/var/lib/kafka
+num.partitions=1
+num.recovery.threads.per.data.dir=1
+offsets.topic.replication.factor=1
+transaction.state.log.replication.factor=1
+transaction.state.log.min.isr=1
+log.retention.hours=168
+log.segment.bytes=1073741824
+log.retention.check.interval.ms=300000
+zookeeper.connect=localhost:2181
+zookeeper.connection.timeout.ms=6000
+group.initial.rebalance.delay.ms=0
+
+listeners=SSL://:9093,SASL_SSL://:9094
+security.inter.broker.protocol=SSL
+ssl.client.auth=required
+ssl.keystore.location=/opt/kafka/ssl/vm101.keystore.jks
+ssl.keystore.password=P@ssw0rd
+ssl.key.password=P@ssw0rd
+ssl.truststore.location=/opt/kafka/ssl/kafka.truststore.jks
+ssl.truststore.password=P@ssw0rd
+ssl.enabled.protocols=TLSv1.2,TLSv1.1,TLSv1
+sasl.mechanism.inter.broker.protocol=PLAIN
+sasl.enabled.mechanisms=PLAIN
+```
+
+тут мы создали listner на 9094 который работает по SASL SSL
+
+тк же создаём jaas конфиг
+/etc/kafka/kafka_server_jaas.conf:
+```
+KafkaServer {
+    org.apache.kafka.common.security.plain.PlainLoginModule required
+    username="admin"
+    password="q1q1q1"
+    user_admin="q1q1q1";
+};
+```
+создаём логин и пароль
+
+чтобы это заработало кафке надо при запуске передать параметр c путём до этого конфига:
+выглядит так
+```
+-Djava.security.auth.login.config=/etc/kafka/kafka_server_jaas.conf
+```
+
+например стандартный RPM пакет для centos передаёт параметры запуска забирая их из
+/etc/sysconfig/kafka
+```
+KAFKA_SERVER_CONFIG=/etc/kafka/server.properties
+KAFKA_LOG4J_OPTS=-Dkafka.logs.dir=/var/log/kafka -Dlog4j.configuration=file:///etc/kafka/log4j.properties
+KAFKA_GC_LOG_OPTS=-Xloggc:/var/log/kafka/kafkaServer-gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps
+KAFKA_JVM_PERFORMANCE_OPTS=-server -XX:+UseG1GC -XX:MaxGCPauseMillis=20 -XX:InitiatingHeapOccupancyPercent=35 -XX:+DisableExplicitGC -Djava.awt.headless=true
+KAFKA_JMX_OPTS=-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.security.auth.login.config=/etc/kafka/kafka_server_jaas.conf
+```
+добавим наш параметр к KAFKA_JMX_OPTS
+
+на этом настройка сервера закончилась
+клиенту необходимо предоставить truststore из предыдущей настройки пароль от него и логин пароль SASL:
+```
+kafka.security.protocol = SASL_SSL
+kafka.ssl.truststore.location = kafka.truststore.jks
+kafka.ssl.truststore.password = P@SSw0rd
+kafka.ssl.key.password = P@SSw0rd
+kafka.sasl.mechanism = PLAIN
+kafka.sasl.password = q1q1q1
+kafka.sasl.username = admin
+```
+
+SASL логин и пароль некоторые клиенты могут принимать файле с таким содержанием:
+```
+KafkaClient {
+  org.apache.kafka.common.security.plain.PlainLoginModule required
+  username="admin"
+  password="q1q1q1";
+};
+```
